[gd_scene load_steps=4 format=3 uid="uid://45xo6i4c06xf"]

[ext_resource type="Script" path="res://scenes/ui.gd" id="1_0kjor"]
[ext_resource type="FontFile" uid="uid://ch103gi2tob72" path="res://Assets/font/andina.ttf" id="1_dnyxx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahai1"]
bg_color = Color(0.6, 0.6, 0.6, 0.32549)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_0kjor")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Points" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_dnyxx")
theme_override_font_sizes/font_size = 30
text = "SCORE : 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="GameOverContainer" type="CenterContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="GameOverBox" type="VBoxContainer" parent="MarginContainer/GameOverContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="MarginContainer/GameOverContainer/GameOverBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_dnyxx")
theme_override_font_sizes/font_size = 60
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverButton" type="Button" parent="MarginContainer/GameOverContainer/GameOverBox/GameOverLabel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -181.0
offset_top = 26.0
offset_right = 182.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_ahai1")
text = "RESTART"
